<?xml version="1.0" encoding="utf-8"?>
<!--

    This file is part of MythTV Android Frontend

    MythTV Android Frontend is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    MythTV Android Frontend is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with MythTV Android Frontend.  If not, see <http://www.gnu.org/licenses/>.

    This software can be found at <https://github.com/MythTV-Clients/MythTV-Android-Frontend/>

-->

    <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/program_guide_timeslots_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:fillViewport="true" >
        
        <LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <Button
		        android:id="@+id/program_guide_timeslots_00_00"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_00_00_12"
				android:duplicateParentState="true"
        		android:focusable="true"
                android:clickable="true" />
            
            <Button
                android:id="@+id/program_guide_timeslots_00_30"
		      	style="@style/ProgramGuideTimeSlotHeader"
                android:text="@string/program_guide_timeslots_00_30_12"
				android:duplicateParentState="true"
        		android:focusable="true"
                android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_01_00"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_01_00_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_01_30"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_01_30_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_02_00"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_02_00_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_02_30"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_02_30_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_03_00"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_03_00_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_03_30"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_03_30_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_04_00"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_04_00_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_04_30"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_04_30_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_05_00"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_05_00_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_05_30"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_05_30_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_06_00"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_06_00_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_06_30"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_06_30_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_07_00"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_07_00_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_07_30"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_07_30_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_08_00"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_08_00_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_08_30"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_08_30_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_09_00"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_09_00_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_09_30"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_09_30_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_10_00"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_10_00_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_10_30"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_10_30_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_11_00"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_11_00_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_11_30"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_11_30_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_12_00"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_12_00_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_12_30"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_12_30_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_13_00"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_13_00_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_13_30"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_13_30_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_14_00"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_14_00_12"
				android:duplicateParentState="true"
        		android:onClick="onClick"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_14_30"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_14_30_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_15_00"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_15_00_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_15_30"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_15_30_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_16_00"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_16_00_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_16_30"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_16_30_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_17_00"
        		style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_17_00_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_17_30"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_17_30_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_18_00"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_18_00_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_18_30"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_18_30_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_19_00"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_19_00_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_19_30"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_19_30_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_20_00"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_20_00_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_20_30"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_20_30_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_21_00"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_21_00_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_21_30"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_21_30_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_22_00"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_22_00_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_22_30"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_22_30_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_23_00"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_23_00_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
            <Button
		        android:id="@+id/program_guide_timeslots_23_30"
		      	style="@style/ProgramGuideTimeSlotHeader"
        		android:text="@string/program_guide_timeslots_23_30_12"
        		android:onClick="onClick"
				android:duplicateParentState="true"
        		android:focusable="true"
        		android:clickable="true" />
            
        </LinearLayout>
        
    </HorizontalScrollView>
      
